@@ -174,6 +174,10 @@ body{
     background-color: rgba(49, 123, 249, .40);
 }
 
+.selected-file .name > a{
+    color:white;
+}
+
 .right, #right{
     float:right;
 }
