@@ -4,6 +4,7 @@ var CloudCommander, Util, DOM = {}, CloudFunc;
     'use strict';
     
     var CURRENT_FILE    = 'current-file',
+        SELECTED_FILE   = 'selected-file',
         XMLHTTP,
         Title,
         
@@ -150,9 +151,10 @@ var CloudCommander, Util, DOM = {}, CloudFunc;
             var lClassList = pElement.classList;
             
             if(lClassList){
-                if( !lClassList.contains(pClass) )
+                lRet = !lClassList.contains(pClass);
+                
+                if( lRet )
                     lClassList.add(pClass);
-                    lRet = true;
             }
         }
         
@@ -964,9 +966,20 @@ var CloudCommander, Util, DOM = {}, CloudFunc;
      * @pCurrentFile
      */
     DOM.getCurrentFile          = function(){
-        var lRet = DOM.getByClass(CURRENT_FILE )[0];
+        var lRet = DOM.getByClass( CURRENT_FILE )[0];
         
         return lRet;
+    };
+    
+    /**
+     * unified way to get current file
+     *
+     * @pCurrentFile
+     */
+    DOM.getSelectedFiles         = function(){
+        var lRet = DOM.getByClass(SELECTED_FILE);
+        
+        return lRet.length ? lRet : !lRet;
     };
     
     /**
@@ -1120,7 +1133,33 @@ var CloudCommander, Util, DOM = {}, CloudFunc;
         
         return  lRet;
     };
+    
+    /**
+     * select current file
+     * @param pCurrent
+     */
+    DOM.selectFile              = function(pCurrent){
+        var lCurrent    = pCurrent || DOM.getCurrentFile(),
+            lRet        = DOM.addClass(pCurrent, SELECTED_FILE);
         
+        if(!lRet)
+            DOM.unSelectFile(lCurrent);
+        
+        return lRet;
+    };
+    
+    /**
+     * unselect current file
+     * @param pCurrent
+     */
+    DOM.unSelectFile              = function(pCurrent){
+        var lCurrent    = pCurrent || DOM.getCurrentFile(),
+            lRet        = DOM.removeClass(lCurrent, SELECTED_FILE);
+        
+        return lRet;
+    };
+    
+    
     /**
      * setting history wrapper
      */
