@@ -18,7 +18,8 @@ var CloudCommander, Util, DOM;
         UP          : 38,
         DOWN        : 40,
         
-        Delete      : 46,
+        INSERT      : 45,
+        DELETE      : 46,
         
         D           : 68,
         
@@ -87,7 +88,7 @@ var CloudCommander, Util, DOM;
                     }
                     
                     else if(lKeyCode >= KEY.F1 && lKeyCode <= KEY.TRA ||
-                        lKeyCode >= KEY.TAB && lKeyCode <= KEY.Delete)
+                        lKeyCode >= KEY.TAB && lKeyCode <= KEY.DELETE)
                         
                         switch(lKeyCode){
                             case KEY.TAB:
@@ -111,7 +112,12 @@ var CloudCommander, Util, DOM;
                                 DOM.preventDefault(pEvent);//запрет на дальнейшее действие
                                 break;
                             
-                            case KEY.Delete:
+                            case KEY.INSERT:
+                                DOM.selectFile(lCurrentFile);
+                                DOM.setCurrentFile( lCurrentFile.nextSibling );
+                                break;
+                            
+                            case KEY.DELETE:
                                 if(pEvent.shiftKey){
                                     var lUrl = DOM.getCurrentPath(lCurrentFile);
                                     
